# internal/delivery/http/router/didalias/aliasfactory.go
@@ -26,15 +26,5 @@ func SetupAliasFactoryRoutes(da fiber.Router, daRepo repository.DIDAliasReposito
 	da.Get("/namehash", daHandler.Namehash)
 	da.Get("/registration-period", daHandler.GetRegistrationPeriod)
 
-	// Write operations (POST methods)
-	// aa.Post("/set-did-root-storage", daHandler.SetDIDRootStorage)
-	// aa.Post("/register-tld", daHandler.RegisterTLD)
-	// aa.Post("/register-domain", daHandler.RegisterDomain)
-	// aa.Post("/register-subdomain", daHandler.RegisterSubdomain)
-	// aa.Post("/set-did", daHandler.SetDID)
-	// aa.Post("/extend-registration", daHandler.ExtendRegistration)
-	// aa.Post("/revoke-alias", daHandler.RevokeAlias)
-	// aa.Post("/unrevoke-alias", daHandler.UnrevokeAlias)
-	// aa.Post("/transfer-alias-ownership", daHandler.TransferAliasOwnership)
-	// aa.Post("/transfer-ownership", daHandler.TransferOwnership)
+	da.Post("/register-tld", daHandler.RegisterTLD)
 }
